--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -4,4 +4,5 @@ COPY package*.json .
 RUN npm install
 COPY . .
 EXPOSE 3001
-ENTRYPOINT [ "npm", "run", "dev"]
+ENTRYPOINT [ "npm", "run"]
+CMD [ "start" ]
