--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -4,5 +4,4 @@ COPY package*.json .
 RUN npm install
 COPY . .
 EXPOSE 3001
-ENTRYPOINT [ "npm", "run"]
-CMD [ "start" ]
+ENTRYPOINT [ "npm", "run", "dev"]
